--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                 <h3 class="page-header">Menu</h3>
                 <ul class="nav menu">
                     <li><a class="page-link" href="{{ site.baseurl }}/">Home</a></li>
-                    {% for page in site.pages %} {% if page.title %} {% if page.title != "VDS 2023" %}
+                    {% for page in site.pages %} {% if page.title %} {% if page.title != "VDS 2024" %}
                     <li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
                     {% endif %} {% endif %} {% endfor %}
                 </ul>
@@ -60,6 +60,7 @@
         <div class="well ">
             <h3 class="page-header">VDS Archive</h3>
             <div class="custom">
+                <a href="http://www.visualdatascience.org/2023/">VDS 2022</a> <br />
                 <a href="http://www.visualdatascience.org/2022/">VDS 2022</a> <br />
                 <a href="http://www.visualdatascience.org/2021/">VDS 2021</a> <br />
                 <a href="http://www.visualdatascience.org/2020/">VDS 2020</a> <br />
