--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -8,35 +8,37 @@ layout: page
 
 <p>Registration at <a href="http://ieeevis.org/year/2023/info/registration/conference-registration"> http://ieeevis.org/year/2023/info/registration/conference-registration </a>.</p>
 
-<span class="time">Mon. Oct 23, 2023, 2:00 PM-5:00 PM AEDT (UTC+11)</span>
+<span class="time">Sun. Oct 13, 2024, 1:30 PM-4:45 PM EDT (UTC-4)</span>
 
 <div class="talk">
-     <span class="time">2:00pm - 2:05pm</span><div class="ttitle">Opening</div>
-     <span class="time">2:05pm - 2:45pm</span><div class="ttitle">Keynote 1: Dr Emi Tanaka</div>
-     {% include invited_talk.html time="9:05am~9:40am CDT" key="emitanaka" %}
+     <span class="time">1:30pm - 1:35pm</span><div class="ttitle">Opening</div>
+     <span class="time">1:35pm - 2:15pm</span><div class="ttitle">Keynote: Marcus Beck</div>
+     {% include invited_talk.html time="1:35pm~2:15pm EDT (UTC-4)" key="marcusbeck" %}
 </div>
 
 <div class="talk">
-     <span class="time">02:45pm - 4:07pm</span><div class="ttitle">Paper Session</div>
-     {% include paper.html time="2:45pm - 2:56pm" key="1" %}
-     {% include paper.html time="2:56pm - 3:07pm" key="2" %}
+     <span class="time">02:15pm - 2:45pm</span><div class="ttitle">Paper Session 1</div>
+     {% include paper.html time="2:15pm - 2:24pm" key="1" %}
+     {% include paper.html time="2:24pm - 2:35pm" key="2" %}
+     {% include paper.html time="2:35pm - 2:46pm" key="3" %}
 </div>
 
 
 <div class="talk">
-     <span class="time">3:15pm - 3:45pm</span><div class="ttitle">Break</div>
+     <span class="time">2:45pm - 3:30pm</span><div class="ttitle">Break + Poster Session</div>
 </div>
 
 <div class="talk">
-     <span class="time">3:45pm - 4:16pm</span><div class="ttitle">Paper Session 2</div>
-     {% include paper.html time="3:45pm - 4:56pm" key="3" %}
-     {% include paper.html time="4:56pm - 4:07pm" key="4" %}
-     {% include paper.html time="4:07pm - 4:16pm" key="5" %}
+     <span class="time">3:30pm - 4:00pm</span><div class="ttitle">Paper Session 2</div>
+     {% include paper.html time="3:30pm - 3:41pm" key="4" %}
+     {% include paper.html time="3:41pm - 3:50pm" key="5" %}
+     {% include paper.html time="3:50pm - 3:59pm" key="6" %}
 </div>
 
 <div class="talk">
-     <span class="time">4:16pm - 4:56pm</span><div class="ttitle">Keynote 2: Dr. Tamara Munzner</div>
-     {% include invited_talk.html time="4:16pm - 4:56pm" key="tamaramunzner" %}
-     <span class="time">4:56pm - 5:00pm</span><div class="ttitle">Closing</div>
+     <span class="time">4:00pm - 4:45pm</span><div class="ttitle">Fireside Chat</div>
+     <!-- {% include invited_talk.html time="4:00pm - 4:45pm" key="alvittaottley" %} -->
+     {% include paper.html time="4:00pm - 4:45pm" key="7" %}
+     <span class="time">4:45pm - 4:50pm</span><div class="ttitle">Closing</div>
 </div> 
 
