updating keynote info

--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -6,7 +6,7 @@ layout: page
 
 
 
-<p>Registration at <a href="http://ieeevis.org/year/2023/info/registration/conference-registration"> http://ieeevis.org/year/2023/info/registration/conference-registration </a>.</p>
+<p>Registration at <a href="https://ieeevis.org/year/2024/info/registration/conference-registration"> https://ieeevis.org/year/2024/info/registration/conference-registration </a>.</p>
 
 <span class="time">Sun. Oct 13, 2024, 1:30 PM-4:45 PM EDT (UTC-4)</span>
 
