--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -37,8 +37,10 @@ layout: page
 
 <div class="talk">
      <span class="time">4:00pm - 4:45pm</span><div class="ttitle">Fireside Chat</div>
+     <b>Emcee:</b> Anamaria Crisan
+     <span class="time">4:00pm - 4:45pm</span><div class="tttitle">VDS at IEEE VIS 2024 will conclude with a fireside chat reflecting on ten years of symposia at the Vis conference.  General Chair Alvitta Ottley will discuss the past, present, and future of visualization for data science with former chairs Hendrik Strobelt (VDS 2020) and Claudio Silva (VDS 2015).</div>
      <!-- {% include invited_talk.html time="4:00pm - 4:45pm" key="alvittaottley" %} -->
-     {% include paper.html time="4:00pm - 4:45pm" key="7" %}
+     <!-- {% include paper.html time="4:00pm - 4:45pm" key="7" %} -->
      <span class="time">4:45pm - 4:50pm</span><div class="ttitle">Closing</div>
 </div> 
 
