--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -25,7 +25,7 @@ layout: page
 
 
 <div class="talk">
-     <span class="time">2:45pm - 3:30pm</span><div class="ttitle">Break + Poster Session</div>
+     <span class="time">2:45pm - 3:30pm</span><div class="ttitle">Break</div>
 </div>
 
 <div class="talk">
