--- a/_layouts/program.html
+++ b/_layouts/program.html
@@ -8,35 +8,35 @@ layout: page
 
 <p>Registration at <a href="https://ieeevis.org/year/2024/info/registration/conference-registration"> https://ieeevis.org/year/2024/info/registration/conference-registration </a>.</p>
 
-<span class="time">Sun. Oct 13, 2024, 1:30 PM-4:45 PM EDT (UTC-4)</span>
+<span class="time">Sun. Oct 13, 2024, 12:00 PM - 3:00 PM EDT (UTC-4)</span>
 
 <div class="talk">
-     <span class="time">1:30pm - 1:35pm</span><div class="ttitle">Opening</div>
-     <span class="time">1:35pm - 2:15pm</span><div class="ttitle">Keynote: Marcus Beck</div>
-     {% include invited_talk.html time="1:35pm~2:15pm EDT (UTC-4)" key="marcusbeck" %}
+     <span class="time">12:00pm - 12:05pm</span><div class="ttitle">Opening</div>
+     <span class="time">12:05pm - 2:45pm</span><div class="ttitle">Keynote: Marcus Beck</div>
+     {% include invited_talk.html time="12:05pm~12:45pm EDT (UTC-4)" key="marcusbeck" %}
 </div>
 
 <div class="talk">
-     <span class="time">02:15pm - 2:45pm</span><div class="ttitle">Paper Session 1</div>
-     {% include paper.html time="2:15pm - 2:24pm" key="1" %}
-     {% include paper.html time="2:24pm - 2:35pm" key="2" %}
-     {% include paper.html time="2:35pm - 2:46pm" key="3" %}
+     <span class="time">12:45pm - 1:15pm</span><div class="ttitle">Paper Session 1</div>
+     {% include paper.html time="12:45pm - 12:55pm" key="1" %}
+     {% include paper.html time="12:55pm - 1:05pm" key="2" %}
+     {% include paper.html time="1:05pm - 1:15pm" key="3" %}
 </div>
 
 
 <div class="talk">
-     <span class="time">2:45pm - 3:30pm</span><div class="ttitle">Break</div>
+     <span class="time">1:15pm - 1:45pm</span><div class="ttitle">Break</div>
 </div>
 
 <div class="talk">
-     <span class="time">3:30pm - 4:00pm</span><div class="ttitle">Paper Session 2</div>
-     {% include paper.html time="3:30pm - 3:41pm" key="4" %}
-     {% include paper.html time="3:41pm - 3:50pm" key="5" %}
-     {% include paper.html time="3:50pm - 3:59pm" key="6" %}
+     <span class="time">1:45pm - 2:15pm</span><div class="ttitle">Paper Session 2</div>
+     {% include paper.html time="1:45pm - 1:55pm" key="4" %}
+     {% include paper.html time="1:55pm - 2:05pm" key="5" %}
+     {% include paper.html time="2:05pm - 2:15pm" key="6" %}
 </div>
 
 <div class="talk">
-     <span class="time">4:00pm - 4:45pm</span><div class="ttitle">Reflections, Challenges, and Innovations in Visualization for Data Science: A Conversation
+     <span class="time">2:15pm - 2:57pm</span><div class="ttitle">Reflections, Challenges, and Innovations in Visualization for Data Science: A Conversation
 </div>
      <b>Emcee:</b> Anamaria Crisan 
      <br>
@@ -46,7 +46,7 @@ layout: page
      <!-- <span class="time">4:45pm - 4:50pm</span><div class="ttitle">Closing</div> -->
 </div> 
 <div class="talk">
-     <span class="time">4:45pm - 4:50pm</span><div class="ttitle">Closing</div>
+     <span class="time">2:57pm - 3:00pm</span><div class="ttitle">Closing</div>
 </div> 
 
 
